// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeguirLeyendo Matches snapshot con canonical_url 1`] = `
<ul
  class="mod-keepreading"
>
  <li
    data-id="1"
    data-pos="toi1"
  >
    <a
      class="com-link --twoxs"
      href="/comunidad/de-cocaina-psicofarmacos-que-efectos-tiene-consumo-nid2470491/"
    >
       De cocaína a psicofármacos: qué efectos tiene el consumo de sustancias ilícitas
    </a>
  </li>
  <li
    data-id="1"
    data-pos="toi2"
  >
    <a
      class="com-link --twoxs"
      href="/comunidad/alcoholismo-senales-alerta-peligros-salud-nid2464890/"
    >
       Alcoholismo. Señales de alerta y los peligros para la salud
    </a>
  </li>
</ul>
`;

exports[`SeguirLeyendo Matches snapshot con website_url 1`] = `
<ul
  class="mod-keepreading"
>
  <li
    data-id="1"
    data-pos="toi1"
  >
    <a
      class="com-link --twoxs"
      href="/arquitectura/prueba-storytelling-roger-nid15072020/"
    >
       Prueba Storytelling roger.
    </a>
  </li>
  <li
    data-id="1"
    data-pos="toi2"
  >
    <a
      class="com-link --twoxs"
      href="/propiedades/los-desarrolladores-ponen-la-mira-en-la-zona-de-canning-nid20102020/"
    >
       Los desarrolladores ponen la mira en la zona de Canning
    </a>
  </li>
</ul>
`;
